# another-atom

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.executor  PROJECT_KNOWLEDGE_BASE.md  README.en.md  README.md  README.zh-CN.md  V1-简要交付说明.md  another-atom-v1-prd.md  atoms_demo_analysis.md  atoms_demo_v1_product_spec.md  pyproject.toml  railway.executor.toml
.github/workflows/: ci.yml
another_atom/: config.py  main.py  observability.py
another_atom/agent/: orchestrator.py  provider.py  tasks.py
another_atom/api/: admin_routes.py  dependencies.py  routes.py
another_atom/contracts/: __init__.py  schemas.py
another_atom/domain/: artifacts.py  auth.py  events.py  images.py  quota.py
another_atom/executor/: __init__.py  app.py  runner.py
another_atom/repository/: __init__.py  service.py
another_atom/runtime/: __init__.py  artifacts.py  client.py  contracts.py
another_atom/sandbox/: __init__.py  client.py  host.py
another_atom/storage/: database.py  models.py
docs/: README.md  another-atom-v1-prd.md  architecture-design.md  atoms-reference-analysis.md  submission-note.md
docs/agents/: domain.md  (+2 more)
review/: 2026-07-10-engineer-qa-review.md  2026-07-10-interaction-approval-review.md  2026-07-10-interaction-trust-review.md  2026-07-11-architecture-review.md  2026-07-11-multi-tenancy-review.md  2026-07-11-project-repository-binding-review.md  2026-07-11-v1-implementation-review.md  README.md
sandbox/: Dockerfile  vimrc
studio/: eslint.config.js  index.html  package-lock.json  package.json
tests/: conftest.py
(+174 files in other folders)
